k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: europe-central2-docker.pkg.dev/task-management-app-430719/test/tma_front_image:4560
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /readiness
          #     port: 8080
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          # startupProbe:
          #   httpGet:
          #     path: /startup
          #     port: 8080
          #   failureThreshold: 30
          #   periodSeconds: 10
